# moba-svg

./: .gitignore  .gitmodules  Makefile.am  common.h  configure.ac  container.h  direction.h  helper.cpp  helper.h  layoutparser.cpp  layoutparser.h  main.cpp  position.h  svgdocument.cpp  svgdocument.h  symbol.cpp  symbol.h
src/: Makefile  Makefile.am  common.h  container.h  direction.h  layoutparser.cpp  layoutparser.h  main.cpp  msgloop.cpp  msgloop.h  svgdocument.cpp  svgdocument.h
